core/logic/domain/src/commonMain/kotlin/com/basket/sample/scango/domain/error/BasketClientAppError.kt
package com.basket.sample.scango.domain.error

import com.basket.core.common.result.failure.Error

sealed interface BasketClientCommonError : Error,
    GetActiveUserError,
    GetUserError,
    SaveActiveUserError,
    FetchTokenInfoError,
    CreateBasketError,
    ObserveActiveBasketError,
    SetActiveBasketError,
    GetActiveBasketError

data class UnexpectedError(
    val message: String,
) : BasketClientCommonError

data object ActiveBasketNotFound :
    GetActiveBasketError,
    ObserveActiveBasketError
